--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -15,7 +15,8 @@
     </xml>
   </noscript>
   <style>
-    td,th,div,p,a,h1,h2,h3,h4,h5,h6 {font-family: "Segoe UI", sans-serif; mso-line-height-rule: exactly;}
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
+    td,th,div,p,a,h1,h2,h3,h4,h5,h6 {font-family: "Inter", sans-serif; mso-line-height-rule: exactly;}
   </style>
   <![endif]-->
   <if condition="page.title">
