--- a/src/templates/signature.html
+++ b/src/templates/signature.html
@@ -11,10 +11,24 @@ bodyClass: bg-white
         <td align="center">
           <table class="w-600 py-16 sm:w-full">
             <tr>
-              <td align="center" class="sm:px-16">
-                <table class="w-full">
+              <td align="center" class="sm:px-0">
+                <table class="w-full mb-24">
                   <tr>
-                    <td class="text-black font-light px-24 sm:px-8">
+                    <td class="text-black font-light pb-24 px-0 sm:px-0" style="border-bottom: 1px solid #E8E7E4;">
+                      <p class="m-0 mb-16 font-bold">
+                        Dobrý den,
+                      </p>
+
+                      <p class="m-0 text-sm">
+                        zde obsah vaší zprávy.
+                      </p>
+                    </td>
+                  </tr>
+                </table>
+
+                <table class="w-full mt-32">
+                  <tr>
+                    <td class="text-black font-light px-0 sm:px-0">
                       <p class="m-0 mb-4 font-bold uppercase">
                         Patrik Vaďura
                       </p>
@@ -24,17 +38,17 @@ bodyClass: bg-white
                       </p>
 
                       <p class="text-sm font-bold text-primary">
-                        <span class="borderContact">
+                        <span class="borderContact text-primary" style="color: #b29f80!important; text-decoration: none!important;">
                           +420 725 007 655
                         </span>
 
-                        <span class="borderContact">
+                        <a href="mailto:vadura@finommedia.cz;" class="borderContact text-primary" style="color: #b29f80!important; text-decoration: none!important;">
                           vadura@finommedia.cz
-                        </span>
+                        </a>
 
-                        <span class="borderContact">
+                        <a href="" class="borderContact text-primary" style="color: #b29f80!important; text-decoration: none!important;">
                           patrikvadura.cz
-                        </span>
+                        </a>
 
                         <span class="ml-2 sm:block sm:mt-8">
                           <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_fb_gmpsgi.png" width="14px">
@@ -48,23 +62,27 @@ bodyClass: bg-white
                   </tr>
                 </table>
 
-                <table class="w-600 pb-16 sm:w-full">
+                <table class="w-600 pb-16 mt-8 sm:w-full">
                   <tr>
-                    <td class="w-1/6 pl-24 text-black font-light sm:w-1/4 sm:px-8">
-                      <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636235405/finom_email-signature/email_profile_vadura_gzafhw.png" width="70px">
+                    <td class="w-1/6 pl-0 text-black font-light sm:w-1/4 sm:px-0">
+                      <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636285573/finom_email-signature/email_profile_bw_vadura_oa3m8k.png" width="70px">
                     </td>
 
-                    <td class="w-5/6 pl-16 text-black font-light sm:w-3/4">
+                    <td class="w-5/6 pl-0 text-black font-light sm:w-3/4">
                       <p class="mb-4 text-sm font-bold uppercase">
                         Finom Group a.s.
                       </p>
 
                       <p class="m-0 text-sm">
-                        Stojanova 1334  |  686 01 Uherské Hradiště |  info@finomgroup.cz
+                        Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finomgroup.cz;" style="color: #262626!important; text-decoration: none!important;">info@finomgroup.cz</a>
                       </p>
 
                       <p class="font-medium text-primary uppercase sm:text-sm sm:font-bold">
-                        WWW.FINOMGROUP.CZ
+                        <a href="https://patrikvadura.cz"
+                           class="text-primary"
+                           style="color: #b29f80!important; text-decoration: none!important;">
+                          WWW.FINOMGROUP.CZ
+                        </a>
                       </p>
                     </td>
                   </tr>
