--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -17,6 +17,14 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
     td,th,div,p,a,h1,h2,h3,h4,h5,h6 {font-family: "Inter", sans-serif; mso-line-height-rule: exactly;}
+    a {
+      color: inherit;
+      text-decoration: none;
+      font-size: inherit;
+      font-family: inherit;
+      font-weight: inherit;
+      line-height: inherit;
+    }
   </style>
   <![endif]-->
   <if condition="page.title">
