fix mobile blue link phone

--- a/src/templates/signature.html
+++ b/src/templates/signature.html
@@ -38,9 +38,9 @@ bodyClass: bg-white
                       </p>
 
                       <p class="text-sm font-bold text-primary">
-                        <span class="borderContact text-primary" style="color: #b29f80!important; text-decoration: none!important;">
+                        <a href="tel:+420 725 007 655;" class="borderContact text-primary" style="color: #b29f80!important; text-decoration: none!important;">
                           +420 725 007 655
-                        </span>
+                        </a>
 
                         <a href="mailto:vadura@finommedia.cz;" class="borderContact text-primary" style="color: #b29f80!important; text-decoration: none!important;">
                           vadura@finommedia.cz
