lik color in text

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -25,6 +25,10 @@
       font-weight: inherit;
       line-height: inherit;
     }
+
+    .contentLink a {
+      color: #b29f80 !important;
+    }
   </style>
   <![endif]-->
   <if condition="page.title">
