--- a/src/templates/signature.html
+++ b/src/templates/signature.html
@@ -14,12 +14,12 @@ bodyClass: bg-white
               <td align="center" class="sm:px-0">
                 <table class="w-full mb-24">
                   <tr>
-                    <td class="text-black font-light pb-24 px-0 sm:px-0" style="border-bottom: 1px solid #E8E7E4;">
+                    <td class="text-black contentLink font-light pb-24 px-0 sm:px-0" style="border-bottom: 1px solid #E8E7E4;">
                       <p class="m-0 mb-16 font-bold">
                         Dobrý den,
                       </p>
 
-                      <p class="m-0 text-sm">
+                      <p class="m-0 text-sm contentLink">
                         zde obsah vaší zprávy.
                       </p>
                     </td>
