--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -14,6 +14,10 @@
   border-right: 1px solid #b29f80;
 }
 
+.contentLink a {
+  color: #b29f80 !important;
+}
+
 @media only screen and (max-width: 600px) {
   .borderContact:nth-child(3) {
     border-right: none !important;
