uprava podpisu a optimalizace

--- a/src/templates/signature_finom-group.html
+++ b/src/templates/signature_finom-group.html
@@ -25,16 +25,22 @@ bodyClass: bg-white
 
           <table class="w-full mt-32">
             <tr>
+              <td class="w-1/6 pl-0 text-black font-light sm:w-1/4 sm:px-0">
+                <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641547287/finom_email-signature/logo/logo_finom-group_lwgivf.png" width="80px">
+              </td>
+            </tr>
+
+            <tr>
               <td class="text-black font-light px-0 sm:px-0">
-                <p class="m-0 mb-4 font-bold uppercase">
+                <p class="m-0 mb-4 font-bold uppercase" style="line-height: 2.5rem!important;">
                   Patrik Vaďura
                 </p>
 
                 <p class="m-0 text-sm uppercase">
-                  Design & web development
+                  Design | Web development | 3D vizualizace
                 </p>
 
-                <p class="text-sm font-bold text-primary">
+                <p class="text-sm font-bold finom_group">
                   <a href="tel:+420 725 007 655;" class="borderContact text-primary" style="color: #b29f80!important; text-decoration: none!important;">
                     +420 725 007 655
                   </a>
@@ -48,11 +54,11 @@ bodyClass: bg-white
                   </a>
 
                   <span class="ml-2 sm:block sm:mt-8">
-                          <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_fb_gmpsgi.png" width="14px">
-                          <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_li_youztx.png" width="14px">
-                          <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_ig_udvsgw.png" width="14px">
-                          <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237020/finom_email-signature/icons/icon_tw_ro7ora.png" width="14px">
-                        </span>
+                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_fb_gmpsgi.png" width="14px">
+                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_li_youztx.png" width="14px">
+                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_ig_udvsgw.png" width="14px">
+                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237020/finom_email-signature/icons/icon_tw_ro7ora.png" width="14px">
+                  </span>
 
                 </p>
               </td>
@@ -65,19 +71,18 @@ bodyClass: bg-white
                 <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636285573/finom_email-signature/email_profile_bw_vadura_oa3m8k.png" width="70px">
               </td>
 
-              <td class="w-5/6 pl-0 text-black font-light sm:w-3/4">
-                <p class="mb-4 text-sm font-bold uppercase">
+              <td class="w-5/6 pl-0 text-gray-300 text-xs sm:w-3/4">
+                <p class="mb-4 font-bold uppercase">
                   Finom Group a.s.
                 </p>
 
-                <p class="m-0 text-sm">
-                  Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finomgroup.cz;" style="color: #262626!important; text-decoration: none!important;">info@finomgroup.cz</a>
+                <p class="m-0">
+                  Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finomgroup.cz;" style="color: #A2A0A0!important; text-decoration: none!important;">info@finomgroup.cz</a>
                 </p>
 
-                <p class="font-medium text-primary uppercase sm:text-sm sm:font-bold">
+                <p class="font-medium text-sm uppercase">
                   <a href="https://patrikvadura.cz"
-                     class="text-primary"
-                     style="color: #b29f80!important; text-decoration: none!important;">
+                     style="color: #A2A0A0!important; text-decoration: none!important;">
                     WWW.FINOMGROUP.CZ
                   </a>
                 </p>
