--- a/src/templates/signature.html
+++ b/src/templates/signature.html
@@ -9,7 +9,7 @@ bodyClass: bg-white
     <table class="w-full font-sans">
       <tr>
         <td align="center">
-          <table class="w-600 py-16 sm:w-full">
+          <table class="w-600 sm:w-full">
             <tr>
               <td align="center" class="sm:px-0">
                 <table class="w-full mb-24">
