--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -14,31 +14,39 @@
       </o:OfficeDocumentSettings>
     </xml>
   </noscript>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
-    td,th,div,p,a,h1,h2,h3,h4,h5,h6 {font-family: "Inter", sans-serif; mso-line-height-rule: exactly;}
-    a {
-      color: inherit;
-      text-decoration: none;
-      font-size: inherit;
-      font-family: inherit;
-      font-weight: inherit;
-      line-height: inherit;
+
+    body, table, td, th, div, p, a, h1, h2, h3, h4, h5, h6 {
+      font-family: 'Lato', Helvetica, Arial, sans-serif; mso-line-height-rule: exactly !important;
     }
 
-    .contentLink a {
-      color: #b29f80 !important;
+    a {
+      color: inherit !important;
+      text-decoration: none !important;
+      font-size: inherit !important;
+      font-family: 'Lato', Helvetica, Arial, sans-serif; mso-line-height-rule: exactly !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
     }
   </style>
+
   <![endif]-->
+
   <if condition="page.title">
     <title>{{{ page.title }}}</title>
   </if>
+
   <if condition="page.css">
-    <style>{{{ page.css }}}</style>
+    <style>
+      {{{ page.css }}}
+    </style>
   </if>
+
   <block name="head"></block>
 </head>
+
 <body class="{{ page.bodyClass }}">
   <if condition="page.preheader">
     <div class="hidden">{{{ page.preheader }}}</div>
