--- a/src/templates/signature_finom-media.html
+++ b/src/templates/signature_finom-media.html
@@ -32,7 +32,7 @@ bodyClass: bg-white
           <table class="w-600 sm:w-full">
             <tr>
               <td class="w-1/6 pl-0 text-black font-light sm:w-1/4 sm:px-0">
-                <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641551789/finom_email-signature/logo/logo_finom-group_qsqysn.png" width="80" style="width: 80px!important;">
+                <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641551789/finom_email-signature/logo/logo_finom-media_yvl4wl.png" width="80" style="width: 80px!important;">
               </td>
             </tr>
           </table>
@@ -56,15 +56,15 @@ bodyClass: bg-white
                 </p>
 
                 <p class="text-sm font-bold finom_group">
-                  <a href="tel:+420 725 007 655;" class="text-finom_group primaryLinks" style="color: #b29f80!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
+                  <a href="tel:+420 725 007 655;" class="text-finom_media mediaLinks" style="color: #6C359E!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
                     +420 725 007 655 |
                   </a>
 
-                  <a href="mailto:vadura@finommedia.cz;" class="text-finom_group primaryLinks" style="color: #b29f80!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
+                  <a href="mailto:vadura@finommedia.cz;" class="text-finom_media mediaLinks" style="color: #6C359E!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
                     vadura@finommedia.cz |
                   </a>
 
-                  <a href="https://www.finomgroup.cz" class="text-finom_group primaryLinks" style="color: #b29f80!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
+                  <a href="https://www.finomgroup.cz" class="text-finom_media mediaLinks" style="color: #6C359E!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
                     patrikvadura.cz |
                   </a>
 
