--- a/src/templates/signature_finom-media.html
+++ b/src/templates/signature_finom-media.html
@@ -52,7 +52,7 @@ bodyClass: bg-white
                 </p>
 
                 <p class="m-0 font-light text-xs uppercase" style="letter-spacing: 1px!important;">
-                  Design | Web development | 3D vizualizace
+                  Design | Web development | 3D visualisation
                 </p>
 
                 <p class="text-sm font-bold finom_group">
@@ -64,7 +64,7 @@ bodyClass: bg-white
                     vadura@finommedia.cz |
                   </a>
 
-                  <a href="https://www.finomgroup.cz" class="text-finom_media mediaLinks" style="color: #6C359E!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
+                  <a href="https://www.patrikvadura.cz" class="text-finom_media mediaLinks" style="color: #6C359E!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
                     patrikvadura.cz |
                   </a>
 
@@ -89,23 +89,23 @@ bodyClass: bg-white
           <table class="w-600 sm:w-full">
             <tr>
               <td class="w-1/6 pl-0 text-black font-light sm:w-1/4 sm:px-0">
-                <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636285573/finom_email-signature/email_profile_bw_vadura_oa3m8k.png" width="70" style="width: 70px!important;">
+                <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641814099/finom_email-signature/profile-vadura_ydq47t.png" width="70" style="width: 70px!important;">
               </td>
 
               <td class="w-5/6 pl-0 text-gray-300 text-xs sm:w-3/4">
                 <p class="mb-4 font-bold uppercase">
-                  Finom Group a.s.
+                  Finom Media & Digital s.r.o.
                 </p>
 
                 <p class="m-0">
-                  Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finomgroup.cz;" class="grayLinks" style="color: #A2A0A0!important; text-decoration: none!important;">info@finomgroup.cz</a>
+                  Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finommedia.cz;" class="grayLinks" style="color: #A2A0A0!important; text-decoration: none!important;">info@finommedia.cz</a>
                 </p>
 
                 <p class="font-medium text-sm uppercase">
-                  <a href="https://patrikvadura.cz"
+                  <a href="https://finommedia.cz"
                      class="grayLinks"
                      style="color: #A2A0A0!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
-                    WWW.FINOMGROUP.CZ
+                    WWW.FINOMMEDIA.CZ
                   </a>
                 </p>
               </td>
