--- a/src/templates/signature_finom-finance.html
+++ b/src/templates/signature_finom-finance.html
@@ -32,7 +32,7 @@ bodyClass: bg-white
           <table class="w-600 sm:w-full">
             <tr>
               <td class="w-1/6 pl-0 text-black font-light sm:w-1/4 sm:px-0">
-                <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641551789/finom_email-signature/logo/logo_finom-group_qsqysn.png" width="80" style="width: 80px!important;">
+                <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641551789/finom_email-signature/logo/logo_finom-finance_avt34z.png" width="80" style="width: 80px!important;">
               </td>
             </tr>
           </table>
@@ -48,24 +48,24 @@ bodyClass: bg-white
             <tr>
               <td class="text-black font-light px-0 sm:px-0">
                 <p class="m-0 mb-4 font-bold uppercase" style="line-height: 2.5rem!important;">
-                  Ondřej Mařák
+                  Radim Antonovič
                 </p>
 
                 <p class="m-0 font-light text-xs uppercase" style="letter-spacing: 1px!important;">
-                  CEO | JEDNATEL SPOLEČNOSTI
+                  SALES DIRECTOR | PARTNER
                 </p>
 
                 <p class="text-sm font-bold finom_group">
-                  <a href="tel:+420 777 888 164;" class="text-finom_group primaryLinks" style="color: #b29f80!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
-                    +420 777 888 164 |
+                  <a href="tel:+420 725 007 655;" class="text-finom_finance financeLinks" style="color: #D09124!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
+                    +420 725 007 655 |
                   </a>
 
-                  <a href="mailto:marak@finomgroup.cz;" class="text-finom_group primaryLinks" style="color: #b29f80!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
-                    marak@finomgroup.cz |
+                  <a href="mailto:vadura@finommedia.cz;" class="text-finom_finance financeLinks" style="color: #D09124!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
+                    antonovic@finomgroup.cz |
                   </a>
 
-                  <a href="https://www.finomgroup.cz" class="text-finom_group primaryLinks" style="color: #b29f80!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
-                    finomgroup.cz |
+                  <a href="https://www.finom.cz" class="text-finom_finance financeLinks" style="color: #D09124!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
+                    finom.cz |
                   </a>
 
                   <span class="ml-2 sm:block sm:mt-8">
@@ -89,23 +89,23 @@ bodyClass: bg-white
           <table class="w-600 sm:w-full">
             <tr>
               <td class="w-1/6 pl-0 text-black font-light sm:w-1/4 sm:px-0">
-                <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641814098/finom_email-signature/profile-marak_t9wqbw.png" width="70" style="width: 70px!important;">
+                <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641814098/finom_email-signature/profile-antonovic_xmgirb.png" width="70" style="width: 70px!important;">
               </td>
 
               <td class="w-5/6 pl-0 text-gray-300 text-xs sm:w-3/4">
                 <p class="mb-4 font-bold uppercase">
-                  Finom Group a.s.
+                  Finom finance & invest s.r.o.
                 </p>
 
                 <p class="m-0">
-                  Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finomgroup.cz;" class="grayLinks" style="color: #A2A0A0!important; text-decoration: none!important;">info@finomgroup.cz</a>
+                  Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finom.cz;" class="grayLinks" style="color: #A2A0A0!important; text-decoration: none!important;">info@finom.cz</a>
                 </p>
 
                 <p class="font-medium text-sm uppercase">
-                  <a href="https://finomgroup.cz"
+                  <a href="https://finom.cz"
                      class="grayLinks"
                      style="color: #A2A0A0!important; text-decoration: none!important; font-family: 'Lato', Helvetica, Arial, sans-serif !important;">
-                    WWW.FINOMGROUP.CZ
+                    WWW.FINOM.CZ
                   </a>
                 </p>
               </td>
