--- a/src/templates/jednotlivci-provizorni/signature_finom-takac.html
+++ b/src/templates/jednotlivci-provizorni/signature_finom-takac.html
@@ -6,7 +6,7 @@ bodyClass: bg-white
 
 <extends src="src/layouts/main.html">
   <block name="template">
-    <each loop="item in {{ page.signatures.reality }}">
+    <each loop="item in {{ page.signatures.finom }}">
       <table class="w-600 font-sans p-16 sm:w-full">
         <tr>
           <td align="center">
