--- a/src/templates/jednotlivci-provizorni/signature_finom-polaskova.html
+++ b/src/templates/jednotlivci-provizorni/signature_finom-polaskova.html
@@ -48,7 +48,7 @@ bodyClass: bg-white
               </tr>
             </table>
 
-            <each loop="item in {{ page.signatures.takac }}">
+            <each loop="item in {{ page.signatures.polaskova }}">
               <table class="w-600 sm:w-full">
                 <tr>
                   <td class="text-black font-light px-0 sm:px-0">
@@ -77,7 +77,6 @@ bodyClass: bg-white
                         <img src="{{ page.signatures.global.icons.facebook }}" width="14" style="width: 14px!important;">
                         <img src="{{ page.signatures.global.icons.linkedin }}" width="14" style="width: 14px!important;">
                         <img src="{{ page.signatures.global.icons.instagram }}" width="14" style="width: 14px!important;">
-                        <img src="{{ page.signatures.global.icons.twitter }}" width="14" style="width: 14px!important;">
                       </span>
                     </p>
                   </td>
@@ -93,7 +92,7 @@ bodyClass: bg-white
 
             <table class="w-600 sm:w-full">
               <tr>
-                <each loop="item in {{ page.signatures.takac }}">
+                <each loop="item in {{ page.signatures.polaskova }}">
                   <td class="w-1/6 pl-0 text-black font-light sm:w-1/4 sm:px-0">
                     <img src="{{ item.photo }}" width="70" style="width: 70px!important;">
                   </td>
