fix typography + build

--- a/src/templates/jednotlivci-provizorni/signature_finom-antonovic.html
+++ b/src/templates/jednotlivci-provizorni/signature_finom-antonovic.html
@@ -7,22 +7,21 @@ bodyClass: bg-white
 <extends src="src/layouts/main.html">
   <block name="template">
     <each loop="item in {{ page.signatures.financeZlin }}">
-      <table class="w-600 font-sans p-16 sm:w-full">
+      <table class="w-600 font-sans sm:w-full">
         <tr>
           <td align="center">
             <table class="w-600 sm:w-full mb-24">
               <tr>
-                <td class="text-black contentLink font-light px-0 sm:px-0">
-                  <div class="m-0 mb-16 font-bold">
-                    {{ page.signatures.global.hello }}
-                  </div>
-                </td>
-              </tr>
-
-              <tr>
-                <td class="text-black contentLink font-light pb-24 px-0 sm:px-0" style="border-bottom: 1px solid #E8E7E4!important;">
-                  <div class="m-0 text-base contentLink">
-                    {{ page.signatures.global.description }}
+                <td class="text-black contentLink font-normal pb-24 px-0 sm:px-0" style="border-bottom: 1px solid #E8E7E4!important;">
+                  <div class="m-0 text-base leading-relaxed contentLink">
+                    Ahoj kluci,
+                    <br><br>
+                    Mám muže asi třetí zpětnou vazbu s Tím,že písmo v našich mailech se zobrazuje jako velmi malé a šedivé.
+                    Bylo by dobré to tedy změnit.
+                    <br><br>
+                    Děkuju
+                    <br><br>
+                    S přáním hezkého dne,
                   </div>
                 </td>
               </tr>
