--- a/src/templates/jednotlivci-provizorni/signature_finom-pikova.html
+++ b/src/templates/jednotlivci-provizorni/signature_finom-pikova.html
@@ -12,9 +12,9 @@ bodyClass: bg-white
           <td align="center">
             <table class="w-600 sm:w-full mb-24">
               <tr>
-                <td class="text-black contentLink font-light pb-24 px-0 sm:px-0" style="border-bottom: 1px solid #E8E7E4!important;">
-                  <div class="m-0 text-base contentLink">
-                    {{ page.signatures.global.descriptionAlt }}
+                <td class="text-black contentLink font-normal pb-24 px-0 sm:px-0" style="border-bottom: 1px solid #E8E7E4!important;">
+                  <div class="m-0 text-base leading-relaxed contentLink">
+                    {{ page.signatures.global.description }}
                   </div>
                 </td>
               </tr>
