--- a/src/templates/jednotlivci-provizorni/signature_finom-cevorova.html
+++ b/src/templates/jednotlivci-provizorni/signature_finom-cevorova.html
@@ -12,16 +12,8 @@ bodyClass: bg-white
           <td align="center">
             <table class="w-600 sm:w-full mb-24">
               <tr>
-                <td class="text-black contentLink font-light px-0 sm:px-0">
-                  <div class="m-0 mb-16 font-bold">
-                    {{ page.signatures.global.hello }}
-                  </div>
-                </td>
-              </tr>
-
-              <tr>
-                <td class="text-black contentLink font-light pb-24 px-0 sm:px-0" style="border-bottom: 1px solid #E8E7E4!important;">
-                  <div class="m-0 text-base contentLink">
+                <td class="text-black contentLink font-normal pb-24 px-0 sm:px-0" style="border-bottom: 1px solid #E8E7E4!important;">
+                  <div class="m-0 text-base leading-relaxed contentLink">
                     {{ page.signatures.global.description }}
                   </div>
                 </td>
