fix typography + build

--- a/src/templates/jednotlivci-provizorni/signature_finom-cevorova.html
+++ b/src/templates/jednotlivci-provizorni/signature_finom-cevorova.html
@@ -7,7 +7,7 @@ bodyClass: bg-white
 <extends src="src/layouts/main.html">
   <block name="template">
     <each loop="item in {{ page.signatures.finance }}">
-      <table class="w-600 font-sans p-16 sm:w-full">
+      <table class="w-600 font-sans sm:w-full">
         <tr>
           <td align="center">
             <table class="w-600 sm:w-full mb-24">
